--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -84,7 +84,7 @@ jobs:
         rm plugins/windows.hexplug
 
     - name: ⬆️ Upload Windows x86_64 artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/1-artifact@v3
       with:
         name: Windows Plugin
         path: |
