--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.16)
 set(CMAKE_CXX_STANDARD 23)
 
 # ImHexQb #
-project(imhexqb VERSION 1.0.2)
+project(imhexqb VERSION 1.0.3)
 
 # Include ImHex cmake module #
 set(IMHEX_BASE_FOLDER ${CMAKE_CURRENT_SOURCE_DIR}/ImHex)
@@ -15,8 +15,8 @@ addDefines()
 
 # Add your source files here #
 add_library(${PROJECT_NAME} SHARED
-        source/imhexqb_plugin.cpp
-        source/qb_recompiler_view.cpp source/qb/qb_recompiler.cpp include/misc/cpp/imgui_stdlib.cpp include/misc/cpp/imgui_stdlib.h source/qb/qb_crc.cpp source/qb/qb_crc.h source/qb/exception/qb_exception.h)
+        source/ImHexQbPlugin.cpp
+        source/view/QbRecompilerView.cpp source/qb/QbRecompiler.cpp include/misc/cpp/imgui_stdlib.cpp include/misc/cpp/imgui_stdlib.h source/qb/QbCrc.cpp source/qb/QbCrc.h source/qb/exception/QbException.h source/qb/cstruct/CStructType.h source/qb/cstruct/CStructHelper.cpp source/qb/cstruct/CStructHelper.h source/qb/cstruct/CStructCComponent.cpp source/qb/cstruct/CStructCComponent.h source/helper/DataHelper.cpp source/helper/DataHelper.h source/type/Vectors.h source/qb/cstruct/CStructElements.h source/view/CStructRecompilerView.cpp source/view/CStructRecompilerView.h)
 
 # Add additional include directories here #
 target_include_directories(${PROJECT_NAME} PRIVATE include)
